--- a/index.html
+++ b/index.html
@@ -7,41 +7,61 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Hero Section: This is the main banner at the top of the page -->
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <div class="nav-logo">
+            <img src="img/cw_logo-2.png" alt="Charity Water Logo">
+        </div>
+        <ul class="nav-links">
+            <li><a href="#story">Our Story</a></li>
+            <li><a href="#impact">Impact</a></li>
+            <li><a href="#donate">Donate</a></li>
+        </ul>
+    </nav>
+
+    <!-- Hero Section -->
     <section class="hero">
-        <!-- Main headline -->
-        <h1>Clean Water for Everyone</h1>
-        <!-- Subheadline -->
-        <p>Join us in bringing safe, clean water to communities in need.</p>
+        <div class="hero-overlay"></div>
+        <div class="hero-content">
+            <h1>Every Dollar, Every Drop</h1>
+            <p>With Charity: Water, 100% of your donation goes to clean water projects.</p>
+            <a href="#donate" class="donate-button">Donate Now</a>
+        </div>
     </section>
 
-    <!-- Story Section: This tells the story of the nonprofit -->
-    <section class="story">
-        <h2>Our Story</h2>
-        <p>
-         
-    </section>
-
-    <!-- Real-World Impact Story Section -->
-    <section class="impact-story">
-        <!-- Section headline -->
-        <h2>Real Impact: Meet Amina</h2>
-        <!-- Container for image and text -->
-        <div class="impact-content">
-            <!-- Impact image -->
-            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Amina smiling with clean water" class="impact-image">
-            <!-- Impact story text -->
+    <!-- Story Section -->
+    <section class="story" id="story">
+        <div class="story-content">
+            <h2>Our Story</h2>
             <p>
-                Amina used to walk miles every day to collect water for her family. Thanks to your support, her village now has a clean water well. Amina can go to school and her family is healthier and happier.
+                Charity Water is dedicated to providing clean and safe drinking water to people in developing countries. Our mission is to end the water crisis and transform lives through sustainable solutions.
             </p>
         </div>
     </section>
 
-    <!-- Call-to-Action Section: This encourages visitors to take action -->
-    <section class="call-to-action">
+    <!-- Impact Section -->
+    <section class="impact-story" id="impact">
+        <h2>Real Impact: Meet Amina</h2>
+        <div class="impact-content">
+            <img src="img/Charity Water 2.jpg" alt="Amina smiling with clean water" class="impact-image">
+            <div class="impact-text">
+                <p>
+                    Amina used to walk miles every day to collect water for her family. Thanks to your support, her village now has a clean water well. Amina can go to school and her family is healthier and happier.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Call-to-Action Section -->
+    <section class="call-to-action" id="donate">
         <h2>Make a Difference</h2>
         <p>Your support can help save lives. Every donation brings us closer to a world with clean water for all.</p>
         <a href="#" class="donate-button">Donate Now</a>
     </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2025 Charity Water. All rights reserved.</p>
+    </footer>
 </body>
 </html>
